# tasking-community

./: .env.template  .gitignore  CLAUDE.md  MANIFEST.in  README.md  main.py  mypy.ini  pyproject.toml  setup.py  type_check.sh  type_check_README.md
prompt/memory/: episode_compress.md  episode_search.md  state_compress.md
prompt/task/: default.md  default.xml  plan_and_exec.xml
prompt/tool/: filesystem.md  human_interfere.md  text_edit.md
prompt/workflow/orchestrate/: orchestrating.md  thinking.md
prompt/workflow/react/: processing.md
prompt/workflow/reflect/: reasoning.md  reflecting.md
prompt/workflow/supervise/: system.md
server/utils/: queue.py
src/: README.md
src/core/agent/: README.md  __init__.py  base.py  const.py  interface.py  orchestrate.py  react.py  reflect.py  simple.py  supervisor.py
src/database/: __init__.py  interface.py  milvus.py  sqlite.py
src/llm/: __init__.py  anthropic.py  ark.py  const.py  interface.py  openai.py  utils.py  zhipu.py
src/memory/: __init__.py  const.py  interface.py  milvus.py  template.py
src/model/: __init__.py  human.py  llm.py  memory.py  message.py  queue.py  setting.py
src/tool/: __init__.py  doc_edit.py  intent.py  terminal.py  text_edit.py
src/utils/: content.py  io.py
tasking/: README.md  __init__.py
tasking/core/: __init__.py
tasking/database/: __init__.py  const.py  interface.py  milvus.py  sqlite.py
tasking/hook/: __init__.py  human.py  step_counter.py  stream.py
tasking/llm/: README.md  __init__.py  anthropic.py  ark.py  interface.py  openai.py  utils.py  zhipu.py
tasking/model/: __init__.py  filesystem.py  human.py  llm.py  memory.py  message.py  queue.py  setting.py
tasking/service/: memory_service.py  task_service.py
tasking/tool/: __init__.py  filesystem.py  git.py  terminal.py  text_edit.py  text_editor.py
tasking/utils/: __init__.py  diff.py  io.py
tests/: README.md  run_tests.py  run_tests.sh  test_coverage_enhancement_plan.md  test_plan.md  test_settings_agents.py
tests/agent/: README_AGENT_TESTS.md  run_agent_tests.py  run_agent_tests.sh  test_agent.py  test_base_agent.py  test_helpers.py  test_interface.py  test_react.py  test_reflect.py  test_simple.py
tests/assets/: ai_intro_v1.txt  ai_intro_v2.txt  complex_texts.csv  news_1.txt  sample_data.csv
tests/memory/: test_milvus_memory.py  test_sqlite_memory.py
tests/scheduler/: README.md  README_SCHEDULER_TESTS.md  __init__.py  run_scheduler_tests.py  run_scheduler_tests.sh  test_scheduler_basic.py  test_scheduler_builder.py  test_scheduler_corner_cases.py  test_scheduler_integration.py
tests/state_machine/: README_STATEMACHINE_TESTS.md  run_state_machine_tests.py  run_state_machine_tests.sh  run_tests_minimal.py  test_corner_cases.py  test_helpers.py  test_state_machine.py  test_task.py  test_tree_task.py  test_workflow.py
tests/terminal/: README.md  run_tests.sh  test_doc_edit.py  test_helpers.py  test_terminal.py
typings/pymilvus/: __init__.pyi  decorators.pyi  exceptions.pyi
typings/volcenginesdkarkruntime/: __init__.pyi  _base_client.pyi  _client.pyi  _compat.pyi  _constants.pyi  _exceptions.pyi  _files.pyi  _legacy_response.pyi  _models.pyi  _qs.pyi  _request_options.pyi  _resource.pyi  _response.pyi  _streaming.pyi  _types.pyi  pagination.pyi
typings/zai/: __init__.pyi  _client.pyi  _version.pyi  version.pyi
(+568 files in other folders)
