[project]
name = "tasking"
version = "0.1.0"
description = "任务驱动智能体系统，基于状态机的AI智能体框架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.72.0",
    "asyncer>=0.0.10",
    "fastmcp>=2.13.0.2",
    "json-repair>=0.54",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "openai>=2.6.1",
    "pip>=25.2",
    "pydantic>=2.12.3",
    "pylint>=4.0.2",
    "pyright>=1.1.407",
    "pytest-asyncio>=1.3.0",
    "socksio>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
