[project]
name = "tasking"
version = "0.1.0"
description = "任务驱动智能体系统，基于状态机的AI智能体框架"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "koko", email = "koko.working0523@outlook.com"}
]
dependencies = [
    "anthropic>=0.72.0",
    "asyncer>=0.0.10",
    "fastapi>=0.121.3",
    "fastmcp>=2.13.0.2",
    "json-repair>=0.54",
    "loguru>=0.7.3",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pymilvus[milvus_lite]>=2.6.4",
    "aiosqlite>=0.19.0",
    "pytest-asyncio>=1.3.0",
    "setuptools>=80.9.0",
    "socksio>=1.0.0",
    "milvus-lite>=2.5.1",
    "volcengine-python-sdk[ark]>=4.0.36",
    "zai-sdk>=0.0.4.3",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.14.0",
    "pylint>=4.0.2",
    "pyright>=1.1.407",
]

[tool.pytest.ini_options]
pythonpath = ["tasking"]
testpaths = ["tests"]
filterwarnings = [
    "ignore:pkg_resources is deprecated:UserWarning:milvus_lite",
]
